--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -1,7 +1,7 @@
 {%extends "base.html"%}
 {%block title%} Natural 20: Character Sheet {%endblock%}
 {%block content%}
-
+<div class=container>
 Welcome {{username}}
 <br>
 Your current quest is to complete {{goals[0].value}} {{goals[0].goal_type}}
@@ -15,5 +15,5 @@ Level: {{level}} <br>
 XP: {{xp}} <br>
 HP: {{hp}} <br>
 </div>
-
+</div>
 {%endblock%}
