--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,11 @@
 </title>
 </head>
 <body>
+	{%if session.get('user_id')%}
+	<a href='/logout'> Log Out </a>
+	{%else%}
+	<a href='/login'> Log In </a>
+	{%endif%}
 	{%block content%}
 
 	{%endblock%}
