--- a/templates/set_goals.html
+++ b/templates/set_goals.html
@@ -12,16 +12,17 @@ Quest type:
 <select id="goal_type" name="goal_type">
 <option value="Steps">Steps</option>
 </select>
+<br> <br>
+Goal value: <input id="value" type="number" name="value"> <br>
 <br>
-Goal value:<input id="value" type="number" name="value"> <br>
+Start Date (optional): <input id="valid_from" type="date" name="valid_from"> <br>
 <br>
-Start Date (optional): <input id="valid_from" type="date" name="valid_from">
-<br>
-End Date: <input id="valid_to" type="date" name="valid_to">
+End Date: <input id="valid_to" type="date" name="valid_to"> <br>
 <br>
 
 <input type="submit" value="Start Quest!">
 </form>
+<br>
 <button id="calc_xp"> Calculate XP </button>
 <div id="show_xp">
 </div>
