--- a/templates/login.html
+++ b/templates/login.html
@@ -5,11 +5,14 @@
 {%block content%}
 <div class="container">
 {% for message in get_flashed_messages()%}
+<div class="flashed_messages">
 {{message}}
+</div>
 {%endfor%}
-<form action="/login" method="POST">
-Username<input type="text" name="username"> <br>
-Password<input type="password" name="password"> <br>
+<form action="/login" method="POST" id="login-form">
+Username <input type="text" name="username"> <br>
+<br>
+Password <input type="password" name="password"> <br>
 <input type="submit" value="Login">
 </form>
 
