--- a/templates/registration.html
+++ b/templates/registration.html
@@ -5,14 +5,16 @@
 {%block content%}
 <div class="container">
 {% for message in get_flashed_messages()%}
+<div class="flashed_messages">
 {{message}}
+</div>
 {%endfor%}
 <form action="/registration" method="POST">
-Username<input type="text" name="username"> <br>
-Email<input type="text" name="email"> <br>
+Username <input type="text" name="username"> <br>
+Email <input type="text" name="email"> <br>
 
-Password<input type="password" name="password"> <br>
-Confirm password<input type="password" name="confirm_password"> <br>
+Password <input type="password" name="password"> <br>
+Confirm password <input type="password" name="confirm_password"> <br>
 
 <input type="submit" value="Begin your campaign">
 </form>
