--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -2,31 +2,36 @@
 {%block title%} Natural 20: Character Sheet {%endblock%}
 {%block content%}
 <div class=container>
-Welcome {{username}}
-<br>
-{%for date, value, ratio, goal in goalstatus %}
-Your current quest is to complete {{goal.value}} {{goal.goal_type}} by {{goal.valid_to}} <br>
-You are currently at {{value}} {{goal.goal_type}} as of {{date}}
- <div class="progress" id={{goal.goal_id}}>
-  <div class="progress-bar" role="progressbar" aria-valuenow={{value}}
-  aria-valuemin="0" aria-valuemax={{goal.value}} style="width:{{ratio}}%">
-    <span class="sr-only">{{ratio}}% complete</span>
-  </div>
-</div> 
-<br>
-<br>
-{%endfor%}
-
-<br>
-
-<div>
+<h1 id="welcome"> Welcome, {{username}}! </h1>
+<div class = "col-md-3 col-xs-12">
+<div id="stats">
 Current Stats: <br>
 Level: {{level}} <br>
 XP: {{xp}} <br>
 HP: {{hp}} <br>
 </div>
-<div id="graph-div" style="width:600px;height:250px;">
 </div>
+<div id="goal_stats" class = "col-md-9 col-xs-12">
+{%for date, value, ratio, goal in goalstatus %}
+<div class="figures_div">
+Your current quest is to complete {{goal.value}} {{goal.goal_type}} by {{goal.valid_to}} <br>
+You are currently at {{value}} {{goal.goal_type}} as of {{date}}
+ <div class="progress" id={{goal.goal_id}}>
+  <div class="progress-bar" role="progressbar" aria-valuenow={{value}}
+  aria-valuemin="0" aria-valuemax={{goal.value}} style="width:{{ratio}}%">
+    <span class="sr-only"> {{ratio}}% complete </span>
+  </div>
+</div> 
+<div id="graph-div{{goal.goal_id}}" style="width:600px;height:250px;">
+</div>
+</div>
+{%endfor%}
+</div>
+<br>
+
+
+<!-- <div id="graph-div" style="width:600px;height:250px;">
+</div> -->
 </div>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="/static/homepage_plots.js"></script>
