--- a/templates/set_goals.html
+++ b/templates/set_goals.html
@@ -11,6 +11,7 @@
 Quest type: 
 <select id="goal_type" name="goal_type">
 <option value="Steps">Steps</option>
+<option value="Calories">Calories</option>
 </select>
 <br> <br>
 Goal value: <input id="value" type="number" name="value"> <br>
