--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link href="https://fonts.googleapis.com/css?family=Jim+Nightshade" rel="stylesheet">
 <link rel="stylesheet" href="/static/styles.css">
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -47,5 +48,10 @@
 	{%block content%}
 
 	{%endblock%}
+<div class="container-fluid">
+<br>
+<hr>
+<br>
+</div>
 </body>
 </html>
