--- a/templates/base.html
+++ b/templates/base.html
@@ -34,11 +34,13 @@
         <li><a href="/logout">Log Out</a></li>
         {%else%}
       <li> <a href='/login'> Log In </a></li>
+      <li><a href='/registration'> Sign Up </a></li>
 	{%endif%}
-	<li><a href='/registration'> Sign Up </a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/set_goal">Set Goals</a></li>
+        <li><a href="/enter_sleep"> Enter Sleep data</a></li>
+        <li><a href="/settings">Settings</a></li>
         </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
