--- a/templates/registration.html
+++ b/templates/registration.html
@@ -5,7 +5,7 @@
 {%block content%}
 <div class="container">
 {% for message in get_flashed_messages()%}
-<div class="flashed_messages">
+<div class="alert alert-danger" role="alert">
 {{message}}
 </div>
 {%endfor%}
