--- a/templates/set_goals.html
+++ b/templates/set_goals.html
@@ -12,9 +12,14 @@ Quest type:
 <select id="goal_type" name="goal_type">
 <option value="Steps">Steps</option>
 <option value="Calories">Calories</option>
+<option value="Sleep"> Sleep</option>
 </select>
 <br> <br>
-Goal value: <input id="value" type="number" name="value"> <br>
+Goal value: <input id="value" type="number" name="value"> 
+<select id="frequency" name="frequency">
+	<option value="Daily"> Daily </option>
+	<option value="Total"> Total </option>
+</select>
 <br>
 Start Date (optional): <input id="valid_from" type="date" name="valid_from"> <br>
 <br>
@@ -34,6 +39,7 @@ End Date: <input id="valid_to" type="date" name="valid_to"> <br>
 $("#calc_xp").on('click',function (evt){
 	evt.preventDefault()
 	var data_to_send = {goal_type: $("#goal_type").val(),
+					frequency: $("#frequency").val(),
 					valid_from: $("#valid_from").val(),
 					valid_to: $("#valid_to").val(),
 					value: $("#value").val()} ;
