wrote some tests

--- a/templates/login.html
+++ b/templates/login.html
@@ -14,10 +14,10 @@
 </div>
 {%endfor%}
 <form action="/login" method="POST" id="login-form">
-Username <input type="text" name="username"> <br>
+Username <input id="username" type="text" name="username"> <br>
 <br>
-Password <input type="password" name="password"> <br>
-<input type="submit" value="Login">
+Password <input id="password" type="password" name="password"> <br>
+<input id="submit" type="submit" value="Login">
 </form>
 
 </div>
