added friend requests

--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -13,6 +13,8 @@ HP: {{hp}} <br>
 </div>
 </div>
 <br>
+<div id="friend_requests">
+</div>
 <br>
 </div>
 <div id="goal_stats" class = "col-md-8 col-xs-12">
@@ -61,4 +63,5 @@ You don't currently have any quests.<br>
 </div>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="/static/homepage_plots.js"></script>
+<script type="text/javascript" src="/static/friend_requests.js"></script>
 {%endblock%}
