--- a/templates/base.html
+++ b/templates/base.html
@@ -32,9 +32,20 @@
       <ul class="nav navbar-nav">
       {%if session.get('user_id')%}
         <li><a href="/logout">Log Out</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Friends <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/friends">Friends</a></li>
+            <li><a href="/add_friends">Add Friends</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Teams</a></li>
+            
+          </ul>
+        </li>
         {%else%}
       <li> <a href='/login'> Log In </a></li>
       <li><a href='/registration'> Sign Up </a></li>
+
 	{%endif%}
       </ul>
       <ul class="nav navbar-nav navbar-right">
