--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
             <li><a href="/friends">Friends</a></li>
             <li><a href="/add_friends">Add Friends</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Teams</a></li>
+            <li><a href="/team">Teams</a></li>
             
           </ul>
         </li>
