--- a/static/styles.css
+++ b/static/styles.css
@@ -73,3 +73,24 @@ body {
 div.alert {
 	display: inline;
 }
+
+.player-overview {
+	border: solid 3px black;
+	border-radius: 5px;
+	padding: 10px;
+	display: inline-block;
+	width: 33%;
+}
+
+.leaderboard-element {
+	display: block;
+	width: 80%;
+	font-size: 30px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+div.friends {
+	border: solid 3px red;
+	background-color: red;
+}
