--- a/templates/team.html
+++ b/templates/team.html
@@ -5,6 +5,7 @@
 {%block content%}
 <div id="content">
 </div>
+<script src="https://unpkg.com/redux@3.7.2/dist/redux.js"></script>
 <script src="http://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
 
