--- a/templates/base.html
+++ b/templates/base.html
@@ -47,12 +47,21 @@
       <li><a href='/registration'> Sign Up </a></li>
 
 	{%endif%}
+	
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/set_goal">Set Goals</a></li>
-        <li><a href="/enter_sleep"> Enter Sleep data</a></li>
-        <li><a href="/settings">Settings</a></li>
-        </ul>
+      	<li id="navbar_date"></li>
+      	{%if session.get('user_id')%}
+      	<li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Settings <span class="caret"></span></a>
+      	<ul class="dropdown-menu">
+	        <li><a href="/set_goal">Set Goals</a></li>
+	        <li><a href="/enter_sleep"> Enter Sleep data</a></li>
+	        <li><a href="/settings">Settings</a></li>
+	    </ul> </li>
+	    {%endif%}
+      </ul>
+     
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
@@ -66,5 +75,9 @@
 <hr>
 <br>
 </div>
+ <script>
+	var d = new Date();
+	document.getElementById("navbar_date").innerHTML = d.toDateString();
+</script> 
 </body>
 </html>
