--- a/templates/enter_sleep.html
+++ b/templates/enter_sleep.html
@@ -7,14 +7,14 @@
 <table>
 <tr>
 <td>
- Bedtime</td><td> <input name="bedtime" type="time"> </td> </tr>
+ Bedtime   </td><td> <input name="bedtime" type="time"> </td> </tr>
  <tr>
  <td>
- Wake up time </td><td><input name="waketime" type="time">
+ Wake up time  <span style="display:inline-block; width: 10px;"></span> </td><td><input name="waketime" type="time">
  </td></tr>
  <tr>
  <td>
- <input type="submit" value="Record sleep">
+ <input class="submit-button" type="submit" value="Record sleep">
  </td>
  </tr>
 
