--- a/templates/outcome.html
+++ b/templates/outcome.html
@@ -7,7 +7,7 @@
 	
 <p id = "intro-text"> So, brave adventurer, it looks like your time to complete your quest is up! Were you victorious or will you have to face the consequences of your defeat </p>
 <br>
-<button id="make-stuff-happen">Did you succeed</button>
+<button class="submit-button" id="make-stuff-happen">Did you succeed</button>
 <br>
 <p id = "outcome-text"></p>
 <div id="go-back">
