--- a/templates/settings.html
+++ b/templates/settings.html
@@ -17,7 +17,7 @@ New email </td><td><input id="new-email" type="text" name="new_email"> </td>
 Confirm new email </td><td> <input id="confirm-email" type="text" name="confirm_email"> </td>
 </tr>
 </table>
-<input type="submit" value="Update Email"> <br>
+<input class="submit-button" type="submit" value="Update Email"> <br>
 </form>
 </div>
 Update Password
@@ -34,7 +34,7 @@ Update Password
 <td>Confirm new password</td><td> <input id="confirm-password" type="password" name="confirm_password"> </td>
 </tr>
 </table>
-<input type="submit" value="Update Password"> <br>
+<input class="submit-button" type="submit" value="Update Password"> <br>
 </form>
 </div>
 </div>
