--- a/templates/outcome.html
+++ b/templates/outcome.html
@@ -5,9 +5,9 @@
 
 <div id="main" class="container">
 	
-<p id = "intro-text"> So, brave adventurer, it looks like your time to complete your quest is up! Were you victorious or will you have to face the consequences of your defeat </p>
+<p id = "intro-text"> So, brave adventurer, it looks like your time to complete your quest is up! Were you victorious or will you have to face the consequences of your defeat? </p>
 <br>
-<button class="submit-button" id="make-stuff-happen">Did you succeed</button>
+<button class="submit-button" id="make-stuff-happen">Did you succeed?</button>
 <br>
 <p id = "outcome-text"></p>
 <div id="go-back">
