--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -24,6 +24,7 @@ HP: {{hp}} <br>
 </div>
 <br>
 <div id="friend_requests">
+{%if not isfriend%}<h1> Friend Requests </h1> {%endif%}
 </div>
 <br>
 </div>
