--- a/static/styles.css
+++ b/static/styles.css
@@ -3,6 +3,8 @@
     src: url(DUNGRG__.TTF);
 }
 
+
+
 h1 {
 	font-family: dungeonsFont;
 	font-size: 70px;
@@ -105,7 +107,9 @@ table#user_list, #user_list th, #user_list td {
     border-color: #642205;
 }
 
-
+a {
+	color :#642205;
+}
 
 .btn-default:hover {
     color: #EDEEC0;
@@ -118,6 +122,9 @@ table#user_list, #user_list th, #user_list td {
 	background-color: #642205;
 }
 
+h3 {
+	font-size:35px;
+}
 
 .regular-text {
 	font-size: 30px;
@@ -217,6 +224,7 @@ input {
 	background-color:   #642205;
 	color: #baa975;
 	padding: 3px;
+	font-size: 30px;
 }
 
 
