hopefully fixed timezones

--- a/templates/dead.html
+++ b/templates/dead.html
@@ -4,7 +4,7 @@
 {%block content%}
 <div class="container">
 Oh no! You reached 0 hit points 
-<form action="\reroll" method="POST">
+<form action="/reroll" method="POST">
 <input class="submit-button" type="submit" value="Re-Roll and return to level 1">
 </form>
 </div>
